# Zygisk-Il2CppDumper-V2

./: module.gradle
.github/workflows/: build.yml
module/src/main/cpp/: CMakeLists.txt  hack.cpp  il2cpp_dump.cpp  main.cpp
template/magisk_module/: customize.sh  module.prop
